gcc/testsuite/rust/rustc/ui/span/issue-43927-non-ADT-derive.rs
#![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
// { dg-error "" "" { target *-*-* } .-1 }
struct DerivedOn;

fn main() {}

